app/assets/stylesheets/upload-loading.scss
/* Dynamic progress bar for please-wait page within file upload journey */

.nidac-display-only-non-javascript {
  display: none;
}

.nidac_progress_bar {
  width: 0%;
  height: 23px;
  background: #1d70b8;
  position :relative;
  // 500ms start delay for Safari - see nidacfrontend.js
  -webkit-animation: move_progress 10s ease-out 500ms;
  animation: move_progress 10s ease-out 500ms;
}

@keyframes move_progress {
  from   {width: 0%;}
  to  {width: 100%;}
}

@-webkit-keyframes  move_progress {
  from   {width: 0%;}
  to  {width: 100%;}
}

